--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,7 @@
         <div class="mytexts">
             <p class="hellotext">Hello and welcome...</p>
              <p>
-                 My name is Mercie Frankie but you can call me Ciemer
+                 My name is VICTORIA MBURU but you can call me Vicky
                  as most people do. <br>I'm a Kenyan photographer who does
                  a number of portraits and shoots.<br> To check out my work you can visit
                  <a href="myservices.html"> my services </a>page.<br>
